the big feeeturee

--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html lang="fr">
 <head>
 <link rel="stylesheet" href="cv-css.css">
-<title> cookies </title>
+<title> pieds </title>
 </head>
 
 <body>
 
 <div class="titre">
 <h1> La recette du bonheur : </h1> 
-<h2> <marquee>  LES COOKIES </marquee> </h2> 
+<h2> <marquee>  LES PIEDS </marquee> </h2> 
 </div>
 
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Soles_of_a_Males_Feet.jpg"/>
 <section>
 
 <div class="definition">
 <h3>Cookies définition : </h3>
 <dl> 
 <dt>PATISSERIE </dt>
-<dd>Biscuit rond, dont la pâte comporte des éclats de chocolat qui remonte le moral lorsqu'on est triste.</dd>
+<dd>Biscuit bien rond hein, dont la pâte comporte des éclats de chocolat qui remonte le moral lorsqu'on est triste.</dd>
 <br> 
 <br/>
 <dt>INFORMATIQUE</dt>
@@ -51,7 +52,7 @@
 <ul>
 <li>1 bol de taille moyenne</li>
 <li>1 grand bol</li>
-<li>1 fouet</li>
+<li>1 fouet à pied</li>
 <li>1 batteur électrique</li>
 <li>2 plaques à pâtisserie</li>
 <li>du papier cuisson</li>
@@ -88,20 +89,20 @@
 <li>Versez petit à petit les ingrédients du bol de taille moyenne dans le grand bol. </li>
 <li>Mélangez légèrement, jusqu'à ce qu'il n'y ait plus de grumeaux de farine. </li>
 <li>Ajoutez les pépites de chocolat dans le grand bol. </li>
-<li>Couvrez le bol de pâte à cookies avec du film étirable. Et mettez-le au réfrigérateur, pendant environ 30 min à 1 h. </li>
+<li>Couvrez le bol de pâte à pieeds avec du film étirable. Et mettez-le au réfrigérateur, pendant environ 30 min à 1 h. </li>
 <li>Retirez la pâte du réfrigérateur et préchauffez le four à 175°C, avec les grilles positionnées au milieu du four. </li>
 <li>Tapissez les deux plaques de pâtisserie avec du papier cuisson. </li>
-<li>Utilisez la cuillère à glace pour faire de grosses boules de pâte à cookies. </li>
+<li>Utilisez la cuillère à glace pour faire de grosses boules de pâte à pieds. </li>
 <li>Posez-les sur la plaque (les biscuits vont s’étaler pendant la cuisson. Alors, prenez soin de bien les espacer sur la plaque à pâtisserie). </li>
 <li>Faites cuire au four pendant environ 10 à 14 minutes, en retournant la plaque à mi-cuisson.</li>
-<li>Sortez les cookies lorsqu'ils sont bien étalés et que leurs bords sont bien dorés. Quant au centre des cookies, il doit être tendre, moelleux et pas tout à fait cuit. </li>
-<li>Laissez refroidir les cookies sur les plaques à pâtisserie pendant environ 15 minutes, jusqu'à ce qu'ils deviennent assez fermes pour les détacher de la plaque. </li>
+<li>Sortez les pieds lorsqu'ils sont bien étalés et que leurs bords sont bien dorés. Quant au centre des pieds, il doit être tendre, moelleux et pas tout à fait cuit. </li>
+<li>Laissez refroidir les pieds sur les plaques à pâtisserie pendant environ 15 minutes, jusqu'à ce qu'ils deviennent assez fermes pour les détacher de la plaque. </li>
 </ol>
 </div>
 </section>
 
 <div class="video" >
-<div style="width:100%;height:100%;position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> <iframe style="position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" src="https://www.dailymotion.com/embed/video/x6z0mld" width="100%" height="100%" allowfullscreen title="Lecteur vidéo Dailymotion" > </iframe> </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/TCd6PfxOy0Y?si=7ou86pUHKwCvUnwC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
 
