--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
 <div class="titre">
 <h1> La recette du bonheur : </h1> 
-<h2> <marquee>  LES PIEDS </marquee> </h2> 
+<h2> <marquee> LES COOKIES </marquee> </h2> 
 </div>
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Soles_of_a_Males_Feet.jpg"/>
 <section>
 
 <div class="definition">
