--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <link rel="stylesheet" href="cv-css.css">
-<title> pieds </title>
+<title> cookies </title>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
 <ul>
 <li>1 bol de taille moyenne</li>
 <li>1 grand bol</li>
-<li>1 fouet à pied</li>
+<li>1 fouet à cookie</li>
 <li>1 batteur électrique</li>
 <li>2 plaques à pâtisserie</li>
 <li>du papier cuisson</li>
@@ -91,11 +91,11 @@
 <li>Couvrez le bol de pâte à pieeds avec du film étirable. Et mettez-le au réfrigérateur, pendant environ 30 min à 1 h. </li>
 <li>Retirez la pâte du réfrigérateur et préchauffez le four à 175°C, avec les grilles positionnées au milieu du four. </li>
 <li>Tapissez les deux plaques de pâtisserie avec du papier cuisson. </li>
-<li>Utilisez la cuillère à glace pour faire de grosses boules de pâte à pieds. </li>
+<li>Utilisez la cuillère à glace pour faire de grosses boules de pâte à cookies. </li>
 <li>Posez-les sur la plaque (les biscuits vont s’étaler pendant la cuisson. Alors, prenez soin de bien les espacer sur la plaque à pâtisserie). </li>
 <li>Faites cuire au four pendant environ 10 à 14 minutes, en retournant la plaque à mi-cuisson.</li>
-<li>Sortez les pieds lorsqu'ils sont bien étalés et que leurs bords sont bien dorés. Quant au centre des pieds, il doit être tendre, moelleux et pas tout à fait cuit. </li>
-<li>Laissez refroidir les pieds sur les plaques à pâtisserie pendant environ 15 minutes, jusqu'à ce qu'ils deviennent assez fermes pour les détacher de la plaque. </li>
+<li>Sortez les cookies lorsqu'ils sont bien étalés et que leurs bords sont bien dorés. Quant au centre des cookies, il doit être tendre, moelleux et pas tout à fait cuit. </li>
+<li>Laissez refroidir les cookies sur les plaques à pâtisserie pendant environ 15 minutes, jusqu'à ce qu'ils deviennent assez fermes pour les détacher de la plaque. </li>
 </ol>
 </div>
 </section>
