--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </section>
 
 <div class="video" >
-      <iframe width="560" height="315" src="https://www.dailymotion.com/embed/video/x6z0mld" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<div style="width:100%;height:100%;position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> <iframe style="position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" src="https://www.dailymotion.com/embed/video/x6z0mld" width="100%" height="100%" allowfullscreen title="Lecteur vidéo Dailymotion" > </iframe> </div>
 </div>
 
 
